Fix: Adequa sintaxe do Java e empacotamento de recursos para compatibilidade universal do executável